App was refactored